update configure structure